modules/gdscript/tests/scripts/analyzer/errors/match_with_variable_expression.gd
func test():
	var a = 1
	match 2:
		a + 2:
			print("not allowed")
